# oop

a1-buian-dragos/a1/: a1-buian-dragos.c  a1.sln  a1.vcxproj  a1.vcxproj.filters
a1-buian-dragos/a1/x64/Debug/: a1.exe.recipe  a1.ilk  a1.vcxproj.FileListAbsolute.txt  vc143.idb
a1-buian-dragos/a1/x64/Debug/a1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  a1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
a23/: Product.c  Product.h  Repository.c  Repository.h  Service.c  Service.h  a23.sln  a23.vcxproj  a23.vcxproj.filters  main.c  menu.c  menu.h
a23/x64/Debug/: vc143.idb
a23/x64/Debug/a23.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  a23.lastbuildstate
a45/: CMakeLists.txt  main.cpp  tests.h
a45/d-arr/: d-arr.cpp  d-arr.h  temp-dyn.h
a45/domain/: event.cpp  event.h  user.cpp  user.h
a45/repo/: events.txt  repo.cpp  repo.h
a45/service/: old_service.cpp  service.cpp  service.h
a45/ui/: ui.cpp
a6/: CMakeLists.txt  main.cpp
a6/domain/: event.cpp  event.h
a6/repo/: repo.cpp  repo.h  users.txt
a6/service/: service.cpp  service.h
a6/ui/: ui.cpp  ui.h
a7/: CMakeLists.txt  main.cpp  tests.h
a7/domain/: user.cpp  user.h
a7/repo/: events.txt  list.csv  list.html  repo.cpp
a7/service/: old_service.h  service.cpp  service.h
a7/ui/: ui.cpp
a8/: CMakeLists.txt  main.cpp  tests.h
a8/gui/: gui.cpp  gui.h
a8/repo/: list.csv  list.html  repo.h
a8/service/: service.cpp  service.h
a8/valid/: valid.h
a9/: CMakeLists.txt  main.cpp
a9/domain/: event.cpp  event.h
a9/gui/: gui.cpp  gui.h
a9/repo/: list.csv  list.html
a9/service/: service.cpp  service.h
a9/ui/: ui.cpp
a9/valid/: valid.cpp
